Update HamsterClub.java